--- a/frontent/index.html
+++ b/frontent/index.html
@@ -5,7 +5,7 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <meta charset="utf-8">
   <title>Frontent</title>
-  <base href="https://DonBrowny.github.io/bogger/">
+  <base href="https://DonBrowny.github.io/bogger/frontent">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.c8c62d67a7db7c7071ee.css"></head>
